[package]
name = "gold-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["compression-full", "cors", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "rustls-tls"], default-features = false }
scraper = "0.22"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
compact_str = { version = "0.8", features = ["serde"] }
arc-swap = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true